Archive2/f5/31af0ef532b766/output
main.cpp:19:5: error: static_assert failed ".."
    static_assert(x.f().g(), "..");
    ^             ~~~~~~~~~
1 error generated.
